新增限流器中間件

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -21,7 +21,7 @@ Email:
   Host: smtp.gmail.com
   Port: 465
   UserName: rorast.power.game@gmail.com
-  Password: jmyi nmnj zghp lalj
+  Password: xxx
   IsSSL: true
   From: rorast.power.game@gmail.com
   To:
